# calcite_server

./: .gitignore  AGENTS.md  Readme.md  _Design_REST_API.md  _Design_database.md  commands.sh
EsClient/: CMakeLists.txt  ES_Insert.json  main.cc  notes_small.csv  out.json
EsClient/models/: EsClient.h
EsClient/test/: CMakeLists.txt
EsClient/utils/: EsClient.cc
calcite/: .clang-format  .gitignore  CMakeLists.txt  config.json  main.cc
calcite/controllers/: AuthController.cc  AuthController.h  FileController.cc  FileController.h  NoteController.cc  NoteController.h  NoteFolderController.cc  NoteFolderController.h  NoteTagController.cc  NoteTagController.h  OcrController.cc  OcrController.h  RecommendController.cc  RecommendController.h  TagController.cc  TagController.h  UserController.cc  UserController.h
calcite/models/: FileResource.cc  FileResource.h  Note.cc  Note.h  NoteCollect.cc  NoteCollect.h  NoteFolder.cc  NoteFolder.h  NoteLike.cc  NoteLike.h  NoteTag.cc  NoteTag.h  SearchHistory.cc  SearchHistory.h  Tag.cc  Tag.h  User.cc  User.h  UserAction.cc  UserAction.h  UserTagStat.cc  UserTagStat.h  model.json
calcite/services/: AuthService.cc  AuthService.h  DsService.cc  DsService.h  KimiService.cc  KimiService.h  NoteFolderService.cc  NoteFolderService.h  NoteService.cc  NoteService.h  OcrService.cc  OcrService.h  TagService.cc  TagService.h
calcite/test/: CMakeLists.txt  api_test.md  test_main.cc
calcite/utils/: EsClient.cc  EsClient.h  JwtUtil.cc  JwtUtil.h  MinioClient.cc  MinioClient.h  PasswordUtil.cc  PasswordUtil.h
docs/: 260318.md  260403.md  260407.md  260407_hotfix.md  260408.md  260408_hotfix.md  260410_hotfix.md  260410_hotfix_1.md  260417_DsService.md  260418_DsService_CrashFix.md  260418_EsClient_Modification.md  260418_NoteActionAPI.md  260418_NoteTag_API.md  260418_searchNotes_Refactor.md  260419_recommend_api.md  api.md  insertTag.sql  out.json  schema.md  schema_new_dump.sql
